fix: spacing, backgound-color

--- a/src/components/Layout/Header/Header.module.scss
+++ b/src/components/Layout/Header/Header.module.scss
@@ -1,7 +1,7 @@
 .nav {
   display: flex;
   height: 5rem;
-  background: #1e293b;
+  background: #0f172a;
   color: #f8fafc;
 
   header {
@@ -9,7 +9,7 @@
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    padding: 1rem;
+    padding: 1rem 2rem;
     margin: auto;
     max-width: 1440px;
 
