--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: center;
   min-height: 100vh;
-  background: #0f172a;
+  background: #f1f1f1;
 }
 
 .content {
