--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -5,13 +5,11 @@
 
   @media screen and (min-width: 768px) {
     grid-template-columns: 1fr 1fr;
-    padding: 4rem;
-    gap: 4rem;
   }
 
-  @media screen and (min-width: 1080px) {
-    grid-template-columns: 1fr 1fr;
-  }
+  // @media screen and (min-width: 1366px) {
+  //   grid-template-columns: 1fr 1fr;
+  // }
 }
 
 .incomplete {
